--- a/test-output/index.html
+++ b/test-output/index.html
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-skipped">Suite</span>
+              <span class="suite-name border-passed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -92,31 +92,26 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,  3 skipped,  </span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title skipped">Skipped methods</span>
-                    <span class="show-or-hide-methods skipped">
-                      <a href="#" panel-name="suite-Suite" class="hide-methods skipped suite-Suite"> (hide)</a> <!-- hide-methods skipped suite-Suite -->
-                      <a href="#" panel-name="suite-Suite" class="show-methods skipped suite-Suite"> (show)</a> <!-- show-methods skipped suite-Suite -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods passed suite-Suite"> (hide)</a> <!-- hide-methods passed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
                     </span>
-                    <div class="method-list-content skipped suite-Suite">
+                    <div class="method-list-content passed suite-Suite">
                       <span>
-                        <img src="skipped.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="test_Pages.Sign_In" class="method navigator-link" hash-for-method="myAccountLink">myAccountLink</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="test_Pages.MyAccount.Saved_Addresses" class="method navigator-link" hash-for-method="editAddress">editAddress</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="skipped.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="test_Pages.Sign_In" class="method navigator-link" hash-for-method="myAddress">myAddress</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="test_Pages.MyAccount.Saved_Addresses" class="method navigator-link" hash-for-method="myAddress">myAddress</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                      <span>
-                        <img src="skipped.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="test_Pages.Sign_In" class="method navigator-link" hash-for-method="signin">signin</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content skipped suite-Suite -->
+                    </div> <!-- method-list-content passed suite-Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -128,22 +123,17 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-skipped">
+          <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="skipped.png"/>
-              <span class="class-name">test_Pages.Sign_In</span>
+              <img src="passed.png"/>
+              <span class="class-name">test_Pages.MyAccount.Saved_Addresses</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="myAccountLink">
-                  </a> <!-- myAccountLink -->
-                  <span class="method-name">myAccountLink</span>
-                  <div class="stack-trace">java.lang.Throwable: Method test_Pages.Sign_In.myAccountLink() on instance test_Pages.Sign_In@45099dd3 depends on not successfully finished methods 
-[test_Pages.Sign_In.signin() on instance test_Pages.Sign_In@45099dd3]
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 18 stack frames
-</div> <!-- stack-trace -->
+                  <a name="editAddress">
+                  </a> <!-- editAddress -->
+                  <span class="method-name">editAddress</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -151,47 +141,10 @@
                   <a name="myAddress">
                   </a> <!-- myAddress -->
                   <span class="method-name">myAddress</span>
-                  <div class="stack-trace">java.lang.Throwable: Method test_Pages.Sign_In.myAddress() on instance test_Pages.Sign_In@45099dd3 depends on not successfully finished methods 
-[test_Pages.Sign_In.signin() on instance test_Pages.Sign_In@45099dd3
-test_Pages.Sign_In.myAccountLink() on instance test_Pages.Sign_In@45099dd3]
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 18 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="signin">
-                  </a> <!-- signin -->
-                  <span class="method-name">signin</span>
-                  <div class="stack-trace">org.openqa.selenium.NoSuchWindowException: no such window: target window already closed
-from unknown error: web view not found
-  (Session info: chrome=121.0.6167.185)
-Build info: version: &apos;4.17.0&apos;, revision: &apos;e52b1be057*&apos;
-System info: os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.4.1&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [f74b18d466ed12f04ad1dd096e9eabda, maximizeCurrentWindow {}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 121.0.6167.185, chrome: {chromedriverVersion: 121.0.6167.184 (057a8ae7deb..., userDataDir: C:\Users\PRIYAN~1.PAT\AppDa...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:55385}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:55385/devtoo..., se:cdpVersion: 121.0.6167.185, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: f74b18d466ed12f04ad1dd096e9eabda
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:185)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:134)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:51)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:190)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:519)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:592)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:596)
-	at org.openqa.selenium.remote.RemoteWebDriver$RemoteWebDriverOptions$RemoteWindow.maximize(RemoteWebDriver.java:1035)
-	at DXL.UAT.DriverSetUp.navigateToURL(DriverSetUp.java:24)
-	at DXL.UAT.BaseClass.launchSite(BaseClass.java:63)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 30 stack frames
-</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-skipped -->
+          </div> <!-- suite-Suite-class-passed -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -207,7 +160,8 @@ Session ID: f74b18d466ed12f04ad1dd096e9eabda
   &lt;test thread-count=&quot;5&quot; name=&quot;Test123&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;DXL.UAT.BaseClass&quot;/&gt;
-      &lt;class name=&quot;test_Pages.Sign_In&quot;/&gt;
+      &lt;class name=&quot;test_Pages.MyAccount.Sign_In&quot;/&gt;
+      &lt;class name=&quot;test_Pages.MyAccount.Saved_Addresses&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test123 --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -221,7 +175,7 @@ Session ID: f74b18d466ed12f04ad1dd096e9eabda
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test123 (2 classes)</span>
+                <span class="test-name">Test123 (3 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -247,24 +201,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'signin')
-data.setCell(0, 2, 'test_Pages.Sign_In')
-data.setCell(0, 3, 0);
+data.setCell(0, 1, 'myAddress')
+data.setCell(0, 2, 'test_Pages.MyAccount.Saved_Addresses')
+data.setCell(0, 3, 1928);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'myAccountLink')
-data.setCell(1, 2, 'test_Pages.Sign_In')
-data.setCell(1, 3, 0);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'myAddress')
-data.setCell(2, 2, 'test_Pages.Sign_In')
-data.setCell(2, 3, 0);
+data.setCell(1, 1, 'editAddress')
+data.setCell(1, 2, 'test_Pages.MyAccount.Saved_Addresses')
+data.setCell(1, 3, 1437);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 0 ms</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -279,11 +229,18 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">test_Pages.Sign_In</span>
+              <span class="ignored-class-name">test_Pages.MyAccount.Sign_In</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">validateDXLTitle</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">test_Pages.MyAccount.Saved_Addresses</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">validateDXLTitle</span>
                 <br/>
@@ -304,13 +261,27 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">test_Pages.Sign_In</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">test_Pages.MyAccount.Saved_Addresses</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">launchSite(chrome, https://uat.gamma.destinationxl.com)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
+              <div class="configuration-class before">
+                <span class="method-name">signin</span>
+                <span class="method-start">15779 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">myAddress</span>
+                <span class="method-start">21093 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">editAddress</span>
+                <span class="method-start">23031 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">24471 ms</span>
+              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
