--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,6 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="858383">  <td>24/02/24 23:17:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchSite(java.lang.String,java.lang.String)[pri:0, instance:test_Pages.Sign_In@45099dd3]">&gt;&gt;launchSite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896305732</td>   <td></td> </tr>
+<tr bgcolor="6cf3ea">  <td>24/02/25 20:08:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Saved_Addresses.editAddress()[pri:2, instance:test_Pages.MyAccount.Saved_Addresses@2a7f1f10]">editAddress</td> 
+  <td>main@1862383967</td>   <td></td> </tr>
+<tr bgcolor="b266b3">  <td>24/02/25 20:08:07</td>   <td>-7251</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Sign_In.signin()[pri:0, instance:test_Pages.MyAccount.Saved_Addresses@2a7f1f10]">&gt;&gt;signin</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1862383967</td>   <td></td> </tr>
+<tr bgcolor="858383">  <td>24/02/25 20:08:16</td>   <td>1441</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:test_Pages.MyAccount.Saved_Addresses@2a7f1f10]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1862383967</td>   <td></td> </tr>
+<tr bgcolor="858383">  <td>24/02/25 20:07:52</td>   <td>-23012</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchSite(java.lang.String,java.lang.String)[pri:0, instance:test_Pages.MyAccount.Saved_Addresses@2a7f1f10]">&gt;&gt;launchSite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1862383967</td>   <td></td> </tr>
+<tr bgcolor="6cf3ea">  <td>24/02/25 20:08:13</td>   <td>-1938</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Saved_Addresses.myAddress()[pri:1, instance:test_Pages.MyAccount.Saved_Addresses@2a7f1f10]">myAddress</td> 
+  <td>main@1862383967</td>   <td></td> </tr>
 </table>
